
lib_LTLIBRARIES = libale.la
libale_la_SOURCES = ale/error.h error.c ale/daemon.h daemon.c portability.c ale/portability.h ale/bitset.h ale/fileutils.h fileutils.c ale/stringutils.h stringutils.c tsymbols.c ale/tsymbols.h ale/exparser.h exparser.c btree.c btree-funcs.c ale/btree.h sl_list.c ale/sl_list.h ale/hash.h hash.c ale/siphash24.h siphash24.c ale/knn.h knn.c
include_HEADERS = ale.h
pkginclude_HEADERS = ale/error.h ale/daemon.h ale/portability.h ale/bitset.h ale/fileutils.h ale/stringutils.h ale/tsymbols.h ale/exparser.h ale/btree.h ale/sl_list.h ale/hash.h ale/siphash24.h ale/knn.h
