LDADD = ../src/libale.la
AM_CFLAGS = -I$(top_srcdir)/src

check_PROGRAMS = t-bitset t-mkpath t-mkpath-fopen t-rmpath t-unlink-path t-error-ret t-strjoin t-exparser t-btree-mknode t-btree-slice t-btree-init t-btree-split-right-leaf t-btree-split-right-internal t-btree-split-leaf-child t-btree-split-internal-child t-btree-split-root t-btree-insert t-btree-search t-sl-init t-sl-stack-operations t-sl-mknode t-sl-insert-remove-first-next-nth t-sl-search t-hash-init-destroy t-hash-set-get t-hash-del t-hash-foreach t-portability-getrandom

TESTS = $(check_PROGRAMS)
